--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,80 @@
+html {
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+}
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  width: 100%;
+  height: 100%;
+  min-height: 1100px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+}
+body header {
+  position: sticky;
+  display: block;
+  top: -10px;
+  height: 60px;
+  background-color: #0f0;
+  margin: 0;
+  z-index: 1000;
+}
+body header nav {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+body header nav ul {
+  width: 100%;
+  list-style-type: none;
+}
+body header nav ul li {
+  display: inline-block;
+  width: 90px;
+  margin: 0 5px 0 0;
+}
+body header nav ul li a {
+  width: 100%;
+}
+body header nav ul li a.currentPage {
+  color: #008000;
+}
+body header nav ul li a[stv-wip] {
+  text-decoration: line-through;
+  color: #000;
+}
+body header nav ul li a[stv-wip]:hover {
+  color: #000;
+}
+body header nav ul li a div {
+  background-color: #000;
+}
+body footer {
+  height: 90px;
+  background-color: #bbb;
+}
+body header,
+body footer {
+  width: 99%;
+}
+body main {
+  color: #000;
+  width: 70%;
+  position: relative;
+  left: calc(50% - (70% / 2));
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+}
+body main {
+  height: 100%;
 }
 a {
-  color: #00b7ff;
+  color: #7ec13f;
+  text-decoration: none;
+}
+a:hover {
+  color: #d0efaa;
 }
