--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,67 @@
+html
+    height 100%
+    width 100%
+    background-color #fff
 body
-//  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+    width 100%
+    height 100%
+    min-height 1100px
+    margin 0
+    padding 0
+    position absolute
+    header
+        position sticky
+        display block
+        top -10px
+        height 60px
+        background-color #0f0
+        margin 0
+        z-index 1000
+        nav
+            width 100%
+            padding 0
+            margin 0
+            ul
+                width 100%
+                list-style-type none
+                li
+                    display inline-block
+                    width 90px
+                    margin 0 5px 0 0
+                    a 
+                        width 100%
+                        &.currentPage
+                            color green
+                        &[stv-wip]
+                            text-decoration line-through
+                            color:#000
+                            &:hover
+                                color #000
+                        div
+                            background-color #000
+    footer
+        height 90px
+        background-color #BBB
+    header
+    footer
+        width 99%
+    main
+        color #000
+        width 70%
+        position relative
+        wid = @width
+        left calc(50% - (70% / 2))
+        padding 0
+        margin 0
+        display inline-block
+    main
+        height 100%
+
+
 a
-  color: #00B7FF
+    color #7ec13f
+    text-decoration none
+    &:hover
+        color: #d0efaa
+//#23aae0 #00B7FF
