--- a/views/design/index.ejs
+++ b/views/design/index.ejs
@@ -15,9 +15,8 @@
         <h1>
             <%= title %>
         </h1>
-        <p>Welcome to the
-            <%= title %>
-        </p>
+        <p>Welcome to the site design mocup index</p>
+        <a href="site/green">site</a>
     </main>
     <% include ../partials/footer%>
 </body>
