--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,7 @@
             <li  class="">
                 <a stv-wip href="#" title="work in progress">
                     <div>
-                        <p>Gallery WIP</p>
+                        <p>WIP</p>
                     </div>
                 </a>
             </li>
