--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,76 +16,103 @@ body header {
   position: sticky;
   display: block;
   top: 0;
-  height: 70px;
-  background-color: #0f0;
+  height: 50px;
+  background-color: #aaa;
   margin: 0;
+  padding: 10px 0 0 0;
   z-index: 1000;
 }
 body header nav {
   width: 100%;
+  height: calc(100% - 20px);
   padding: 0;
   margin: 0;
   position: absolute;
   bottom: 0;
   border-bottom: solid 10px;
-  border-bottom-color: #f00;
+  border-bottom-color: #587b94;
 }
 body header nav ul {
   width: calc(100% - 20px);
+  height: 100%;
   margin: 0;
   padding: 0 10px;
   position: absolute;
+  display: flex;
   bottom: 0;
   list-style-type: none;
 }
 body header nav ul li {
-  display: inline-block;
+  display: inline-flex;
+  flex-basis: auto;
+  position: relative;
   width: 140px;
   margin: 0;
   padding: 0;
   height: 100%;
+  border-top-left-radius: 15px;
+  border-top-left-radius: 15px;
+  background-color: #d19111;
 }
-body header nav ul li.currentPage {
-  background-color: #f00;
+body header nav ul li:hover a {
+  background-color: #3f6269;
+}
+body header nav ul li.currentPage a {
+  background-color: #587b94;
+  color: #fff;
+border-color
 }
 body header nav ul li a {
   height: 100%;
-  width: 100%;
+  width: calc(100% - 5px);
   padding: 0;
   margin: 0;
   font-size: 2rem;
-}
-body header nav ul li a.currentPage {
-  color: #008000;
-}
-body header nav ul li a[stv-wip] {
-  text-decoration: line-through;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  border-left: 5px solid #d19111;
+  border-top-left-radius: 15px;
   color: #000;
 }
 body header nav ul li a[stv-wip]:hover {
   color: #000;
 }
-body header nav ul li a div p {
-  text-align: center;
+body header nav ul li a div {
+  display: inline-block;
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
-footer {
+body header nav ul li a div p {
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  line-height: 2rem;
+  height: 20px;
+  text-align: center;
+  width: 100%;
+  padding: 0 0 10px 0;
+  margin: 0;
+}
+body footer {
   height: 90px;
   background-color: #bbb;
 }
-header,
-footer {
+body header,
+body footer {
   width: 100%;
 }
-main {
+body main {
   color: #000;
   width: 70%;
   position: relative;
-  left: calc(50% - (70% / 2));
+  left: calc((50% - (70% / 2)));
   padding: 0;
   margin: 0;
   display: inline-block;
 }
-main {
+body main {
   height: 100%;
 }
 a {
@@ -93,5 +120,5 @@ a {
   text-decoration: none;
 }
 a:hover {
-  color: #d0efaa;
+  color: #fff;
 }
