--- a/views/design/index.ejs
+++ b/views/design/index.ejs
@@ -12,11 +12,13 @@
 <body>
     <% include ../partials/header%>
     <main>
-        <h1>
-            <%= title %>
-        </h1>
-        <p>Welcome to the site design mocup index</p>
-        <a href="site/green">site</a>
+        <h1>Site Mockup Gallery</h1>
+        <p>The below websites offer examples of my skills in responsive web design with a variety of website templates</p>
+        <p>Each sub-site has a theme </p>
+        <div>
+            <a href="site/green">Green</a>
+            <p>A site that is solely shades of green no template used</p>
+        </div>
     </main>
     <% include ../partials/footer%>
 </body>
