--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,18 @@
 <footer>
-    &copy;  <%= title %>
+    <div>
+        <table id="contactInfo">
+            <tbody>
+                <tr>
+                    <td>mail@mail.com</td>
+                    <td>linkedIn.com</td>
+                    <td>(555)555-5555</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <p>
+            Light Designs &copy; 2017 Steven A Light<br/>Powered by NodeJS
+        </p>
+    </div>
 </footer>
