--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,43 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: #fff;
-  font-size: 10px;
+  background-color: #aaa;
+  font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+h1 {
+  font-size: 2.5rem;
+  border-bottom: solid #3f6269 4px;
+  border-left: solid #3f6269 4px;
+  padding-left: 8px;
+}
+h2 {
+  font-size: 2.3rem;
+  border-bottom: solid #3f6269 4px;
+  padding-left: 4px;
+}
+h3 {
+  font-size: 2.1rem;
+  border-bottom: solid #3f6269 4px;
+  padding-left: 8px;
+}
+h4 {
+  font-size: 1.8rem;
+  border-bottom: solid #587b94 2px;
+  padding-left: 12px;
+}
+h5 {
+  font-size: 1.6rem;
+  border-bottom: solid #587b94 2px;
+  padding-left: 16px;
+}
+h6 {
+  font-size: 1.4rem;
+  border-bottom: solid #587b94 2px;
+  padding-left: 20px;
 }
 body {
-  font: 1.4rem "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 1.4rem;
   height: 100%;
-  min-height: 1100px;
   margin: 0 0 0 0;
   padding: 0;
   border: none;
@@ -16,27 +46,34 @@ body header {
   position: sticky;
   display: block;
   top: 0;
-  height: 50px;
-  background-color: #aaa;
+  height: 70px;
+  background-color: #888;
   margin: 0;
   padding: 10px 0 0 0;
   z-index: 1000;
+  border-bottom-color: #3f6269;
 }
 body header nav {
-  width: 100%;
-  height: calc(100% - 20px);
+  width: calc(100% - 16px);
+  height: calc(100% - 40px);
   padding: 0;
   margin: 0;
   position: absolute;
   bottom: 0;
-  border-bottom: solid 10px;
-  border-bottom-color: #587b94;
+  border: solid 8px #888;
+  background-color: #888;
+}
+@media (min-width: 1000px) {
+  body header nav {
+    width: calc(90% - 16px);
+    left: 5%;
+  }
 }
 body header nav ul {
-  width: calc(100% - 20px);
+  width: 100%;
   height: 100%;
   margin: 0;
-  padding: 0 10px;
+  padding: 0;
   position: absolute;
   display: flex;
   bottom: 0;
@@ -46,37 +83,44 @@ body header nav ul li {
   display: inline-flex;
   flex-basis: auto;
   position: relative;
-  width: 140px;
-  margin: 0;
+  bottom: 0;
+  width: calc(20% - 8px);
+  margin: 0 0 0 8px;
   padding: 0;
   height: 100%;
-  border-top-left-radius: 15px;
-  border-top-left-radius: 15px;
-  background-color: #d19111;
+}
+body header nav ul li:first-child {
+  margin: 0;
+  width: 20%;
 }
 body header nav ul li:hover a {
-  background-color: #3f6269;
+  background-color: #d19111;
 }
 body header nav ul li.currentPage a {
-  background-color: #587b94;
-  color: #fff;
-border-color
+  background-color: #d19111;
+  color: #000;
+  cursor: default;
+}
+body header nav ul li.title a,
+body header nav ul li.title a:hover {
+  background-color: #3f6269;
+  color: #000;
 }
 body header nav ul li a {
   height: 100%;
-  width: calc(100% - 5px);
+  width: 100%;
   padding: 0;
   margin: 0;
   font-size: 2rem;
   display: inline-block;
   position: absolute;
   bottom: 0;
-  border-left: 5px solid #d19111;
-  border-top-left-radius: 15px;
-  color: #000;
+  background-color: #587b94;
+  color: #fff;
 }
 body header nav ul li a[stv-wip]:hover {
-  color: #000;
+  cursor: not-allowed;
+  background-color: #587b94;
 }
 body header nav ul li a div {
   display: inline-block;
@@ -89,15 +133,73 @@ body header nav ul li a div p {
   position: absolute;
   bottom: 0;
   line-height: 2rem;
-  height: 20px;
+  height: 2rem;
+  text-align: center;
+  width: 100%;
+  padding: 0 0 10px 0;
+  margin: 0;
+}
+body header > div {
+  display: inline-block;
+  width: 136px;
+  height: 40px;
+  padding: 0;
+  margin: 0;
+  font-size: 2rem;
+  position: absolute;
+  bottom: 0;
+  left: 30px;
+  border: 2px solid #3f6269;
+  border-bottom-width: 0;
+  background-color: #d19111;
+  color: #000;
+}
+body header > div > p {
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  line-height: 2rem;
+  height: 2rem;
   text-align: center;
   width: 100%;
   padding: 0 0 10px 0;
   margin: 0;
 }
 body footer {
-  height: 90px;
-  background-color: #bbb;
+  height: 140px;
+  background-color: #587b94;
+  border-top: solid #3f6269 10px;
+  color: #fff;
+}
+body footer > div {
+  height: calc(50% - 20px);
+  padding: 0;
+  position: relative;
+}
+body footer > div > table {
+  width: 60%;
+  position: relative;
+  left: calc(20% - 2px);
+  text-align: center;
+  top: 15px;
+}
+body footer > div > table tbody tr td:nth-child(2) {
+  border-left: solid #fff 2px;
+  border-right: solid #fff 2px;
+}
+body footer > div:first-child {
+  width: 800px;
+  left: calc(50% - 400px);
+  top: 0;
+}
+body footer > div:last-child {
+  width: 100%;
+}
+body footer > div:last-child > p {
+  text-align: center;
+  width: 300px;
+  position: relative;
+  left: calc(50% - 150px);
 }
 body header,
 body footer {
@@ -107,13 +209,56 @@ body main {
   color: #000;
   width: 70%;
   position: relative;
-  left: calc((50% - (70% / 2)));
+  left: calc(50% - (70% / 2));
   padding: 0;
   margin: 0;
   display: inline-block;
 }
-body main {
-  height: 100%;
+body main article {
+  width: calc(100% - 30px);
+  padding: 15px;
+  display: flex;
+}
+body main article:nth-of-type(odd) {
+  background-color: #f0f;
+}
+body main article:nth-of-type(even) {
+  background-color: #0f0;
+}
+body main article:nth-of-type(even) figure {
+  order: 2;
+  margin: 0 0 0 5px;
+}
+body main article:nth-of-type(even) div {
+  margin: 0 5px 0 0;
+}
+body main article figure {
+  width: calc(35% - 15px);
+  margin: 0 5px 0 0;
+  padding: 4px;
+  border: #000 solid 1px;
+  display: inline-block;
+  position: relative;
+}
+body main article figure img {
+  width: calc(100% - 20px);
+max-width
+  position: relative;
+  left: 10px;
+  top: 10px;
+}
+body main article figure figcaption {
+  position: absolute;
+  bottom: 0;
+}
+body main article div {
+  width: calc(65% - 5px);
+  margin: 0 0 0 5px;
+  display: inline-block;
+}
+body main article div h3,
+body main article div p {
+  color: inherit;
 }
 a {
   color: #7ec13f;
