--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,9 +40,9 @@
             </li>
             <% } else {%>
             <li  class="">
-                <a stv-wip href="#" title="work in progress">
+                <a wip href="/gallery" title="work in progress">
                     <div>
-                        <p>WIP</p>
+                        <p>Gallery</p>
                     </div>
                 </a>
             </li>
