--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,39 +1,50 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: #aaa;
+  background-color: #444;
   font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 h1 {
   font-size: 2.5rem;
-  border-bottom: solid #3f6269 4px;
-  border-left: solid #3f6269 4px;
-  padding-left: 8px;
+  border-bottom: solid #11b7b7 4px;
+  border-left: solid rgba(255,255,255,0) 4px;
+  padding-left: 20px;
+  margin-top: 0;
 }
 h2 {
   font-size: 2.3rem;
-  border-bottom: solid #3f6269 4px;
-  padding-left: 4px;
+  border-bottom: solid #11b7b7 4px;
+  border-left: solid rgba(0,0,0,0) 4px;
+  padding-left: 18px;
+  margin-top: 0;
 }
 h3 {
   font-size: 2.1rem;
-  border-bottom: solid #3f6269 4px;
-  padding-left: 8px;
+  border-bottom: solid #11b7b7 4px;
+  border-left: solid rgba(0,0,0,0) 4px;
+  padding-left: 16px;
+  margin-top: 0;
 }
 h4 {
   font-size: 1.8rem;
-  border-bottom: solid #587b94 2px;
-  padding-left: 12px;
+  border-bottom: solid #11b7b7 4px;
+  border-left: solid rgba(0,0,0,0) 4px;
+  padding-left: 14px;
+  margin-top: 0;
 }
 h5 {
   font-size: 1.6rem;
-  border-bottom: solid #587b94 2px;
-  padding-left: 16px;
+  border-bottom: solid #11b7b7 4px;
+  border-left: solid rgba(0,0,0,0) 4px;
+  padding-left: 14px;
+  margin-top: 0;
 }
 h6 {
   font-size: 1.4rem;
-  border-bottom: solid #587b94 2px;
-  padding-left: 20px;
+  border-bottom: solid #11b7b7 4px;
+  border-left: solid rgba(0,0,0,0) 4px;
+  padding-left: 14px;
+  margin-top: 0;
 }
 body {
   font-size: 1.4rem;
@@ -46,26 +57,24 @@ body header {
   position: sticky;
   display: block;
   top: 0;
-  height: 70px;
-  background-color: #888;
+  height: 60px;
+  background-color: #222;
   margin: 0;
   padding: 10px 0 0 0;
   z-index: 1000;
-  border-bottom-color: #3f6269;
+  border-bottom: solid #5e528a 10px;
 }
 body header nav {
-  width: calc(100% - 16px);
-  height: calc(100% - 40px);
+  width: calc(100%);
+  height: calc(100% - 30px);
   padding: 0;
   margin: 0;
   position: absolute;
   bottom: 0;
-  border: solid 8px #888;
-  background-color: #888;
 }
 @media (min-width: 1000px) {
   body header nav {
-    width: calc(90% - 16px);
+    width: calc(90%);
     left: 5%;
   }
 }
@@ -85,13 +94,9 @@ body header nav ul li {
   position: relative;
   bottom: 0;
   width: calc(20% - 8px);
-  margin: 0 0 0 8px;
+  margin: 0 4px;
   padding: 0;
   height: 100%;
-}
-body header nav ul li:first-child {
-  margin: 0;
-  width: 20%;
 }
 body header nav ul li:hover a {
   background-color: #d19111;
@@ -115,12 +120,12 @@ body header nav ul li a {
   display: inline-block;
   position: absolute;
   bottom: 0;
-  background-color: #587b94;
+  background-color: #11b7b7;
   color: #fff;
 }
-body header nav ul li a[stv-wip]:hover {
+body header nav ul li a[wip]:hover {
   cursor: not-allowed;
-  background-color: #587b94;
+  background-color: #11b7b7;
 }
 body header nav ul li a div {
   display: inline-block;
@@ -167,7 +172,7 @@ body header > div > p {
 }
 body footer {
   height: 140px;
-  background-color: #587b94;
+  background-color: #11b7b7;
   border-top: solid #3f6269 10px;
   color: #fff;
 }
@@ -210,7 +215,7 @@ body main {
   width: 70%;
   position: relative;
   left: calc(50% - (70% / 2));
-  padding: 0;
+  padding: 30px 0;
   margin: 0;
   display: inline-block;
 }
